--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,1 +1,5 @@
-
+FROM nginx:alpine
+COPY index.html /usr/share/nginx/html/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 3000
+CMD ["nginx", "-g", "daemon off;"]
